# DataStructures_HashTableDictionary

./: README.md  avl_tree.cpp  avl_tree.h  dictionary_avl.cpp  dictionary_avl.h  main.cpp  measurement.cpp
results/: DictionaryResults.txt  LinearFit.py
src/: avl_tree.h  dictionary.h  dictionary_heap.cpp  dictionary_heap.h  dictionary_sc.cpp  dictionary_sc.h  heap.cpp  heap.h
viz/: CMakeLists.txt  viz.cpp
